# dbt-duckdb-games

./: README.md  data_processing.py  pyproject.toml
data/: applicationDevelopers.csv  applicationGenres.csv  applicationInformation.csv  applicationPublishers.csv
valve_games/: .sqlfluff  .sqlfluffignore  overview.md  sources.yml
valve_games/Dashboard/: README.md
valve_games/dashboard/: README.md
valve_games/models/dim/: _dim_schema.yml  dim_application_genres.sql  dim_application_information.sql  dim_dates.sql
valve_games/models/fct/: _fct_schema.yml  fct_games_price_history.sql  fct_player_count_day_agg.sql  fct_player_count_hour_agg.sql
valve_games/models/marts/: _marts_schema.yml  mrt_game_popularity_summary.sql  mrt_games_price_history.sql  mrt_player_count_agg.sql  mrt_player_engagement_trends.sql  mrt_pricing_strategies.sql  mrt_top_popular_genres.sql  mrt_top_popular_languages.sql  schema.yml
valve_games/models/staging/: _stg_schema.yml  schema.yml  stg_application_developers.sql  stg_application_genres.sql  stg_application_information.sql  stg_application_packages.sql  stg_application_publishers.sql  stg_application_supported_languages.sql  stg_application_tags.sql  stg_dates.sql  stg_player_count_1h.sql  stg_player_count_5min.sql  stg_price_history.sql
