[tool.poetry]
name = "dbt-duckdb-games"
version = "0.1.0"
description = ""
authors = ["Dmitrii Pyshnenko <126788707+DmitriiPyshnenko-TomTom@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
pip = "^24.0"
install = "^1.3.5"
google-cloud-storage = "^2.14.0"
google-cloud-bigquery = "^3.17.2"
polars = "^0.20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
